# ASPIA

./: .env  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.redis.dev.yml  docker-compose.yml  package-lock.json
backend/: .gitignore  Dockerfile  Dockerfile-dev  config_server.ini  config_server.ini.template  entrypoint.sh  init.sh  pyproject.toml
backend/config/: config_server.ini.template
backend/handler/: .evt_10000_calculate_spectrogram.py.swp  .evt_10004_spectrogram_all_get.py.swp  .evt_2002_convolute.py.swp  .evt_4000_resample_chart.py.swp  .evt_4000_reshape_ir.py.swp  .evt_4001_reshaped_ir_get.py.swp  .evt_4002_schroeder_curve.py.swp  .evt_5003_filter_spectrum_get.py.swp  evt_010000_test.py  evt_01000_status.py  evt_01001_status.py  evt_01001_watch_status.py  evt_08000_test.py  evt_09995_manipulate_redis.py  evt_09996_save_data_in_redis.py  evt_09997_load_data_from_redis.py  evt_09998_delete_group_in_redis.py  evt_09999_check_group_existence.py  evt_10000_calculate_spectrogram.py  evt_10001_spectrogram_amp_get.py  evt_10002_spectrogram_power_get.py  evt_10003_spectrogram_DB_get.py  evt_10004_spectrogram_all_get.py  evt_10005_generate_window.py  evt_10006_window_get.py  evt_1000_pick_representative_ir.py  evt_1999_create_anechoic_sound.py  evt_2000_convolution.py  evt_2000_create_anechoic_sound.py  evt_2000_import_impulse_response.py  evt_2000_import_sound_files.py  evt_2001_anechoic_fft.py  evt_2001_import_impulse_response.py  evt_2001_resample.py  evt_2002_convolute.py  evt_2002_resample.py  evt_2003_convolute.py  (+28 more)
(+175 files in other folders)
