[tool.poetry]
name = "vue-ducts-backend"
version = "0.2.0"
description = ""
authors = ["Susumu Saito <saito@iflab.tokyo>"]

[tool.poetry.dependencies]
python = "^3.9"
ducts = "^0.1.5"
watchdog = "^2.1.3"
PyYAML = "^5.4.1"
argh = "^0.26.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
